src/views/page/Home/components/SloganBlock.scss
.slogan-section {
  .slogan-wrapper {
    margin-bottom: 30px;

    .slogan {
      color: #f1f2f2;
      font-size: 36px;

      .word-primary {
        color: #ffb229;
      }

      .word-secondary {
        color: #dc962a;
      }

      @include media-breakpoint-up(sm) {
        max-width: 400px;
      }

      @include media-breakpoint-up(lg) {
        font-size: 48px;
        max-width: 700px;
      }

      @include media-breakpoint-up(xxl) {
        font-size: 64px;
      }
    }

    .slogan-links {
      .slogan-link {
        flex: 1 0 50%;

        .circled-word {
          width: 90%;
          margin-top: 10%;
          padding: 10px 12px;
          border-width: 2px;
          border-radius: 6px;
          font-size: 16px;

          @media (min-width: 400px) {
            width: 94%;
            margin-top: 6%;
          }

          @include media-breakpoint-up(sm) {
            padding: 13px 24px;
            font-size: 26px;
            border-width: 4px;
          }

          @include media-breakpoint-up(lg) {
            padding: 25px 35px;
            margin-top: 5%;
            width: 95%;
          }

          @include media-breakpoint-up(xl) {
            font-size: 32px;
            padding: 25px 50px;
          }

          @include media-breakpoint-up(xxl) {
            font-size: 48px;
            padding: 35px 60px;
          }
        }
      }
    }

    .start-journey-button {
      font-size: 16px;
      color: #f1f2f2;
      padding: 8px 21px;
      border: solid 2px #f1f2f2;
      border-radius: 4px;

      @include media-breakpoint-up(lg) {
        font-size: 21px;
        border: solid 4px #f1f2f2;
        padding: 12px 27px;
        transition: 0.3s;

        &:hover {
          background-color: #f1f2f2;
          color: #17181c;
        }
      }

      @include media-breakpoint-up(xxl) {
        font-size: 26px;
        padding: 15px 27px;
      }
    }
  }
}

